rewording in wish.1 as a consequence of Tcl ticket b9f3ff8fe6

--- a/doc/wish.1
+++ b/doc/wish.1
@@ -233,8 +233,9 @@ incomplete commands.
 .SH ZIPVFS
 .PP
 When a zipfile is concatenated to the end of \fBwish\fR, on startup
-the contents of the zip archive will be mounted under the virtual file
-system \fB//zipfs:/\fR. If a top level directory \fBtk_library\fR is
+the contents of the zip archive will be mounted under a virtual file
+system (VFS). The root of that VFS can be retrieved using the
+\fBzipfs root\fR command. If a top level directory \fBtk_library\fR is
 present in the zip archive, it will become the directory loaded as
 env(TK_LIBRARY). If a file named \fBmain.tcl\fR is present in the top
 level directory of the zip archive, it will be sourced instead of the
