--- a/doc/wish.1
+++ b/doc/wish.1
@@ -235,11 +235,12 @@ incomplete commands.
 When a zipfile is concatenated to the end of \fBwish\fR, on startup
 the contents of the zip archive will be mounted under a virtual file
 system (VFS). The root of that VFS can be retrieved using the
-\fBzipfs root\fR command. If a top level directory \fBtk_library\fR is
-present in the zip archive, it will become the directory loaded as
-env(TK_LIBRARY). If a file named \fBmain.tcl\fR is present in the top
+\fBzipfs root\fR command. The zip archive is mounted under the \fBapp\fR
+directory within the VFS. If a file named \fBmain.tcl\fR is present in the top
 level directory of the zip archive, it will be sourced instead of the
-shell's normal command line handing.
+shell's normal command line handing. If a top level directory \fBtk_library\fR is
+present in the zip archive, it will become the directory loaded as
+env(TK_LIBRARY).
 .PP
 Only one zipfile can be concatenated to the end of executable image
 (tclsh, or wish). However, if multiple zipfiles are
